- BatEnum: BatEnum.combine is now curried, just like List.combine,
  its signature changes from:
    val combine: 'a t * 'b t -> ('a * 'b) t
  to
    val combine: 'a t -> 'b t -> ('a * 'b) t
  #578
  (François Berenger)
- PSet: add a ?cmp argument to every function that creates a PSet:
    of_enum, of_list, of_array
  are changed. The default value is Pervasives.compare.
  #679
  (Cedric Cellier)

## v2.11.0 (minor release)

This minor release fixes a few bugs or interface mismatch with OCaml stdlib,
and is compatible with BER MetaOCaml.

This is the last planned release of the v2 series.
Next planned release (v3.0.0) will introduce some API changes.

Notable changes:

- Add Unix.with_locked_file
  #904
  (Simon Cruanes, Cedric Cellier, review by Francois Berenger)

- Build with -strict-sequence
  #927
  (Armaël Guéneau, review by Francois Berenger)

- Add Legacy.Result for OCaml >= 4.8.0
  #913
  (Cedric Cellier, review by Francois Berenger)

- Remove BatOo
  #915
  (Cedric Cellier, review by Francois Berenger)

- Add BatFilename
  #910
  (Cedric Cellier, review by Francois Berenger)

- Make batteries usable with BER MetaOCaml
  #909
  (Cedric Cellier, review by Francois Berenger and Gabriel Scherer)

- Unix.sleepf is provided across all OCaml versions;
  previously it was only for OCaml >= 4.03.0
  #930
  (Francois Berenger, review by Cedric Cellier)

## v2.10.0 (minor release)

This minor release adds support for OCaml 4.08.0.

This release is compatible with OCaml 4.08.0, but it is not complete
with respect to the standard library of OCaml 4.08.0: this release saw
a lot of changes to the standard library, which have not yet been made
available in the corresponding Batteries module. This means that users
of OCaml 4.08.0 (and Batteries 2.10.0) will have access to these
functions, but users of older OCaml versions (and Batteries 2.10.0)
will not. If you are looking for this kind of backward-compatibility