@@ -59,6 +59,10 @@ Changelog
   are changed. The default value is Pervasives.compare.
   #679
   (Cedric Cellier)
+- BatResult: BatPervasives.result is now equal to Stdlib.result
+  instead of sharing constructors without being the same type
+  #939, #957
+  (Clément Busschaert, Cedric Cellier)
 
 ## v2.11.0 (minor release)
 
